// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPhoneInput should render correctly 1`] = `
<span
  className="bpk-phone-input"
>
  <label
    className="bpk-label bpk-phone-input__dialing-code-label"
    htmlFor="dialing-code"
  >
    Dialing code
  </label>
  <select
    aria-invalid={false}
    className="bpk-select bpk-phone-input__dialing-code dialing-code"
    disabled={false}
    id="dialing-code"
    label="Dialing code"
    name="Dialing code"
    onChange={[Function]}
    style={
      Object {
        "width": "118px",
      }
    }
    value="44"
  >
    <option
      numberPrefix="+44"
      value="44"
    >
      +44
    </option>
    <option
      numberPrefix="+55"
      value="55"
    >
      +55
    </option>
  </select>
  <label
    className="bpk-label bpk-phone-input__phone-number-label"
    htmlFor="phone-input-id"
  >
    Telephone number
  </label>
  <input
    aria-invalid={false}
    className="bpk-input bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    type="tel"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a "disabled" attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <label
    className="bpk-label bpk-label--disabled bpk-phone-input__dialing-code-label"
    htmlFor="dialing-code"
  >
    Dialing code
  </label>
  <select
    aria-invalid={false}
    className="bpk-select bpk-phone-input__dialing-code dialing-code"
    disabled={true}
    id="dialing-code"
    label="Dialing code"
    name="Dialing code"
    onChange={[Function]}
    style={
      Object {
        "width": "118px",
      }
    }
    value="44"
  >
    <option
      numberPrefix="+44"
      value="44"
    >
      +44
    </option>
    <option
      numberPrefix="+55"
      value="55"
    >
      +55
    </option>
  </select>
  <label
    className="bpk-label bpk-label--disabled bpk-phone-input__phone-number-label"
    htmlFor="phone-input-id"
  >
    Telephone number
  </label>
  <input
    aria-invalid={false}
    className="bpk-input bpk-phone-input__phone-number fancy-input"
    disabled={true}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    type="tel"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a "large" attribute 1`] = `
<span
  className="bpk-phone-input bpk-phone-input--large"
>
  <label
    className="bpk-label bpk-phone-input__dialing-code-label"
    htmlFor="dialing-code"
  >
    Dialing code
  </label>
  <select
    aria-invalid={false}
    className="bpk-select bpk-select--large bpk-phone-input__dialing-code dialing-code"
    disabled={false}
    id="dialing-code"
    label="Dialing code"
    name="Dialing code"
    onChange={[Function]}
    style={
      Object {
        "width": "124px",
      }
    }
    value="44"
  >
    <option
      numberPrefix="+44"
      value="44"
    >
      +44
    </option>
    <option
      numberPrefix="+55"
      value="55"
    >
      +55
    </option>
  </select>
  <label
    className="bpk-label bpk-phone-input__phone-number-label"
    htmlFor="phone-input-id"
  >
    Telephone number
  </label>
  <input
    aria-invalid={false}
    className="bpk-input bpk-input--large bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    type="tel"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a "valid" attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <label
    className="bpk-label bpk-phone-input__dialing-code-label"
    htmlFor="dialing-code"
  >
    Dialing code
  </label>
  <select
    aria-invalid={false}
    className="bpk-select bpk-phone-input__dialing-code dialing-code"
    disabled={false}
    id="dialing-code"
    label="Dialing code"
    name="Dialing code"
    onChange={[Function]}
    style={
      Object {
        "width": "118px",
      }
    }
    value="44"
  >
    <option
      numberPrefix="+44"
      value="44"
    >
      +44
    </option>
    <option
      numberPrefix="+55"
      value="55"
    >
      +55
    </option>
  </select>
  <label
    className="bpk-label bpk-phone-input__phone-number-label"
    htmlFor="phone-input-id"
  >
    Telephone number
  </label>
  <input
    aria-invalid={false}
    className="bpk-input bpk-input--valid bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    type="tel"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a "wrapperProps" attribute 1`] = `
<span
  aria-label="container"
  className="bpk-phone-input container"
>
  <label
    className="bpk-label bpk-phone-input__dialing-code-label"
    htmlFor="dialing-code"
  >
    Dialing code
  </label>
  <select
    aria-invalid={false}
    className="bpk-select bpk-phone-input__dialing-code dialing-code"
    disabled={false}
    id="dialing-code"
    label="Dialing code"
    name="Dialing code"
    onChange={[Function]}
    style={
      Object {
        "width": "118px",
      }
    }
    value="44"
  >
    <option
      numberPrefix="+44"
      value="44"
    >
      +44
    </option>
    <option
      numberPrefix="+55"
      value="55"
    >
      +55
    </option>
  </select>
  <label
    className="bpk-label bpk-phone-input__phone-number-label"
    htmlFor="phone-input-id"
  >
    Telephone number
  </label>
  <input
    aria-invalid={false}
    className="bpk-input bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    type="tel"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with a dialing code image attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <label
    className="bpk-label bpk-phone-input__dialing-code-label"
    htmlFor="dialing-code"
  >
    Dialing code
  </label>
  <div
    className="bpk-select-wrapper dialing-wrapper"
  >
    <span
      aria-hidden={true}
      className="bpk-select-wrapper__image"
    />
    <select
      aria-invalid={false}
      className="bpk-select bpk-select--with-image bpk-phone-input__dialing-code dialing-code"
      disabled={false}
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      onChange={[Function]}
      style={
        Object {
          "width": "118px",
        }
      }
      value="44"
    >
      <option
        numberPrefix="+44"
        value="44"
      >
        +44
      </option>
      <option
        numberPrefix="+55"
        value="55"
      >
        +55
      </option>
    </select>
  </div>
  <label
    className="bpk-label bpk-phone-input__phone-number-label"
    htmlFor="phone-input-id"
  >
    Telephone number
  </label>
  <input
    aria-invalid={false}
    className="bpk-input bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    type="tel"
    value="1234"
  />
</span>
`;

exports[`BpkPhoneInput should render correctly with the "dialingCodeMask" attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <label
    className="bpk-label bpk-phone-input__dialing-code-label"
    htmlFor="dialing-code"
  >
    Dialing code
  </label>
  <select
    aria-invalid={false}
    className="bpk-select bpk-phone-input__dialing-code dialing-code"
    disabled={false}
    id="dialing-code"
    label="Dialing code"
    name="Dialing code"
    onChange={[Function]}
    style={
      Object {
        "width": "118px",
      }
    }
    value="44"
  >
    <option
      numberPrefix="+44"
      value="44"
    >
      +44
    </option>
    <option
      numberPrefix="+55"
      value="55"
    >
      +55
    </option>
  </select>
  <label
    className="bpk-label bpk-phone-input__phone-number-label"
    htmlFor="phone-input-id"
  >
    Telephone number
  </label>
  <input
    aria-invalid={false}
    className="bpk-input bpk-phone-input__phone-number fancy-input"
    disabled={false}
    id="phone-input-id"
    name="Telephone input"
    onChange={[Function]}
    type="tel"
    value="+44 1234"
  />
</span>
`;
